--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,15 @@
     <string name="menu_statistics">Statistics</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_account">Account</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="name_required">Name required</string>
+    <string name="birth_date">Birth date</string>
+    <string name="user_registration_successful">User registration is successful!</string>
+    <string name="user_registration_failure">Failed to register! Try again!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
