--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="birth_date">Birth date</string>
     <string name="user_registration_successful">User registration is successful!</string>
     <string name="user_registration_failure">Failed to register! Try again!</string>
+    <string name="user_login_failure">Failed to login! Please check email and password!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="logout">Logout</string>
 </resources>
