--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,13 @@
     <string name="user_registration_successful">User registration is successful!</string>
     <string name="user_registration_failure">Failed to register! Try again!</string>
     <string name="user_login_failure">Failed to login! Please check email and password!</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="email_verification">Check your email to verify your account!</string>
     <string name="logout">Logout</string>
+    <string name="age_group">Age group</string>
+    <string name="user_name">Name</string>
+    <string name="gender">Gender</string>
+    <string name="contact">Contact</string>
+    <string name="contact_email" translatable="false">tomsschedule.app@gmail.com</string>
+    <string name="female">Female</string>
+    <string name="male">Male</string>
 </resources>
