--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_home">Activities</string>
     <string name="menu_statistics">Statistics</string>
     <string name="menu_settings">Settings</string>
@@ -30,4 +29,39 @@
     <string name="contact_email" translatable="false">tomsschedule.app@gmail.com</string>
     <string name="female">Female</string>
     <string name="male">Male</string>
+    <string name="add_new_activity_fragment_label">Add new activity</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
+    <string name="color_pick">Choose a color</string>
+    <string name="priority">Priority (1-10)</string>
+    <string name="has_deadline">It has just a deadline</string>
+    <string name="regularity">It is a regular activity</string>
+    <string name="just_interval">It is just a simple interval</string>
+    <string name="just_time_measure">Neither of them</string>
+    <string name="dates_type">Select the regularity type</string>
+    <string name="deadline">Deadline</string>
+    <string name="daily">Daily</string>
+    <string name="weekly">Weekly</string>
+    <string name="monthly">Monthly</string>
+    <string name="weekly_days">Select days of week</string>
+    <string name="monthly_days">Select days of month</string>
+    <string name="custom_interval_from">Start of interval</string>
+    <string name="custom_interval_to">End of interval</string>
+    <string name="is_time_measured">Has a duration?</string>
+    <string name="sum_time">One (long) duration for all days</string>
+    <string name="simple_time">The same duration for each day</string>
+    <string name="custom_time">Different duration for each day</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
+    <string name="activity_name">Activity name</string>
+    <string name="name_of_activity">Name</string>
+    <string name="color">Color</string>
+    <string name="note">Note</string>
+    <string name="priority">Priority</string>
+    <string name="select_color">Select color</string>
 </resources>
