Working on add activity fragment

--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -32,4 +32,62 @@
     <string name="confirm">Választ</string>
     <string name="cancel">Bezár</string>
     <string name="color_pick">Válassz egy színt</string>
+    <string name="priority">Prioritás (0-10)</string>
+    <string name="has_deadline">Csak egy határidő</string>
+    <string name="regularity">Rendszeres tevékenység</string>
+    <string name="just_interval">Csak egy intervallum</string>
+    <string name="just_time_measure">Semelyik előző (pl. hobby)</string>
+    <string name="dates_type">Válaszd ki a rendszerességet!</string>
+    <string name="deadline">Határidő</string>
+    <string name="daily">Naponta</string>
+    <string name="weekly">Hetente</string>
+    <string name="monthly">Havonta</string>
+    <string name="weekly_days">Válaszd ki a napokat!</string>
+    <string name="custom_interval_from">Intervallum kezdete</string>
+    <string name="custom_interval_to">Intervallum vége</string>
+    <string name="start_day">Kezdő nap</string>
+    <string name="end_day">Utolsó nap</string>
+    <string name="has_an_end_date">Csak egy bizonyos napig tart?</string>
+    <string name="end_date">Utolsó nap</string>
+    <string name="is_time_measured">Szeretnél időtartamot beállítani?</string>
+    <string name="sum_time">Összesen akarom megadni</string>
+    <string name="simple_time">Ugyanannyi idő minden nap</string>
+    <string name="custom_time">Különböző minden megadott nap a héten</string>
+    <string name="is_weekly_time">Ugyanannyi idő minden héten</string>
+    <string name="has_fixed_days">Csak bizonyos napokat érint a héten?</string>
+    <string name="monday">Hétfő</string>
+    <string name="tuesday">Kedd</string>
+    <string name="wednesday">Szerda</string>
+    <string name="thursday">Csütörtök</string>
+    <string name="friday">Péntek</string>
+    <string name="saturday">Szombat</string>
+    <string name="sunday">Vasárnap</string>
+    <string name="activity_name">Tevékenység neve</string>
+    <string name="name_of_activity">Név</string>
+    <string name="color">Szín (a téma színe)</string>
+    <string name="note">Jegyzet</string>
+    <string name="select_color">Válassz egy színt!</string>
+    <string name="add_custom_name">Egyedi tevékenységet akarsz hozzáadni?</string>
+    <string name="fix_activities">Nem, szeretném látni a globális statisztikában</string>
+    <string name="custom_activity">Igen</string>
+    <string name="fa_workout">Edzés</string>
+    <string name="fa_sleeping">Alvás</string>
+    <string name="fa_housework">Házimunka</string>
+    <string name="fa_cooking">Főzés</string>
+    <string name="fa_shopping">Bevásárlás</string>
+    <string name="fa_work">Munka</string>
+    <string name="fa_school">Iskola</string>
+    <string name="fa_learning">Tanulás</string>
+    <string name="fa_travelling">Utazás</string>
+    <string name="fa_hobby">Hobbi</string>
+    <string name="fa_relaxation">Kikapcsolódás</string>
+    <string name="fa_reading">Olvasás</string>
+    <string name="notification_type">Válaszd ki, hogy milyen típusú a tevékenység!</string>
+    <string name="days">Napok (>=0)</string>
+    <string name="hours">Órák (0-23)</string>
+    <string name="minutes">Percek (0-59)</string>
+    <string name="days_hint">Nap</string>
+    <string name="hours_hint">Óra</string>
+    <string name="minutes_hint">Perc</string>
+    <string name="select_fixed_days_times">Adj meg időt minden kiválsztott naphoz!</string>
 </resources>
