--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,10 +106,25 @@
     <string name="turn_off_notifications">Do you want...?</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="detail_fragment_label">Details</string>
-    <string name="details_daily">daily</string>
-    <string name="details_weekly">weekly</string>
-    <string name="details_monthly">monthly</string>
+    <string name="details_daily">Daily</string>
+    <string name="details_weekly">Weekly</string>
+    <string name="details_weekly_days">Weekly on these days</string>
+    <string name="details_monthly">Monthly</string>
     <string name="details_deadline">Deadline</string>
     <string name="details_interval">Interval (from - to)</string>
     <string name="details_end_date">The last day</string>
+    <string name="details_sum_time">You want to spend this amount of time all</string>
+    <string name="details_daily_time">You want to spend this amount of time daily</string>
+    <string name="details_weekly_time">You want to spend this amount of time weekly</string>
+    <string name="details_monthly_time">You want to spend this amount of time monthly</string>
+    <string name="details_custom_time">You want to spend this amount of time on the selected days</string>
+    <string name="detail_days">days</string>
+    <string name="detail_hours">hours</string>
+    <string name="detail_minutes">minutes</string>
+    <string name="fab_start_timer">Start timer</string>
+    <string name="fab_minus_time">Reduce time</string>
+    <string name="fab_plus_time">Add time</string>
+    <string name="fab_edit">Edit activity</string>
+    <string name="fab_delete">Delete activity</string>
+    <string name="sure_delete_acitvity">Do you really want to delete this activity?</string>
 </resources>
