--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -120,4 +120,21 @@
     <string name="priority_detail">Prioritás</string>
     <string name="regularity_detail">Rendszeresség</string>
     <string name="note_detail">Jegyzet</string>
+    <string name="fab_start_timer">Időszámlálás indítása</string>
+    <string name="fab_minus_time">Időmennyiség csökkentés</string>
+    <string name="fab_plus_time">Időmennyiség hozzáadás</string>
+    <string name="fab_edit">Tevékenység szerkesztése</string>
+    <string name="fab_delete">Tevékenység törlése</string>
+    <string name="sure_delete_acitvity">Valóban ki akarod törölni ezt a tevékenységet?</string>
+    <string name="error">Hiba</string>
+    <string name="global_activity_name_immutable">tevékenység neve (globális tevékenységek neveit nem lehet szerkeszteni)</string>
+    <string name="edit">Szerkeszt</string>
+    <string name="add_time_to_activity">Időmennyiség hozzáadása</string>
+    <string name="add_time_date">Állítsd be a dátumot</string>
+    <string name="add_time_time">Állítsd be az időmennyiséget</string>
+    <string name="add_time_fragment_label">Időmennyiség szerkesztése</string>
+    <string name="date">Dátum</string>
+    <string name="time">Időmennyiség</string>
+    <string name="select_time">Válaszd ki az időmennyiséget!</string>
+    <string name="select_date">Válaszd ki a dátumot!</string>
 </resources>
