--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -39,9 +39,9 @@
     <string name="just_time_measure">Semelyik előző (pl. hobby)</string>
     <string name="dates_type">Válaszd ki a rendszerességet!</string>
     <string name="deadline">Határidő</string>
-    <string name="daily">Naponta</string>
-    <string name="weekly">Hetente</string>
-    <string name="monthly">Havonta</string>
+    <string name="daily">naponta</string>
+    <string name="weekly">hetente</string>
+    <string name="monthly">havonta</string>
     <string name="weekly_days">Válaszd ki a napokat!</string>
     <string name="custom_interval_from">Intervallum kezdete</string>
     <string name="custom_interval_to">Intervallum vége</string>
@@ -55,13 +55,13 @@
     <string name="custom_time">Különböző minden megadott nap a héten</string>
     <string name="is_weekly_time">Ugyanannyi idő minden héten</string>
     <string name="has_fixed_days">Csak bizonyos napokat érint a héten?</string>
-    <string name="monday">Hétfő</string>
-    <string name="tuesday">Kedd</string>
-    <string name="wednesday">Szerda</string>
-    <string name="thursday">Csütörtök</string>
-    <string name="friday">Péntek</string>
-    <string name="saturday">Szombat</string>
-    <string name="sunday">Vasárnap</string>
+    <string name="monday">hétfő</string>
+    <string name="tuesday">kedd</string>
+    <string name="wednesday">szerda</string>
+    <string name="thursday">csütörtök</string>
+    <string name="friday">péntek</string>
+    <string name="saturday">szombat</string>
+    <string name="sunday">vasárnap</string>
     <string name="activity_name">Tevékenység neve</string>
     <string name="name_of_activity">Név</string>
     <string name="color">Szín (a téma színe)</string>
@@ -102,10 +102,10 @@
     <string name="turn_off_notifications">Akarod...?</string>
     <string name="hello_blank_fragment">something</string>
     <string name="detail_fragment_label">Részletek</string>
-    <string name="details_daily">Naponta</string>
-    <string name="details_weekly">Hetente</string>
+    <string name="details_daily">napi</string>
+    <string name="details_weekly">heti</string>
     <string name="details_weekly_days">Hetente ezeken a napokon</string>
-    <string name="details_monthly">Havonta</string>
+    <string name="details_monthly">havi</string>
     <string name="details_deadline">Határidő</string>
     <string name="details_interval">Intervallom (kezdete-vége)</string>
     <string name="details_end_date">Az utolsó nap</string>
@@ -149,4 +149,11 @@
     <string name="fire">Tűz</string>
     <string name="milky_way">Tejút</string>
     <string name="colourful">Színes</string>
+    <string name="monday_short">h</string>
+    <string name="tuesday_short">k</string>
+    <string name="wednesday_short">sze</string>
+    <string name="thursday_short">cs</string>
+    <string name="friday_short">p</string>
+    <string name="saturday_short">szo</string>
+    <string name="sunday_short">v</string>
 </resources>
