--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,13 @@
     <string name="friday">Friday</string>
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
+    <string name="monday_short">M</string>
+    <string name="tuesday_short">TU</string>
+    <string name="wednesday_short">W</string>
+    <string name="thursday_short">TH</string>
+    <string name="friday_short">F</string>
+    <string name="saturday_short">SA</string>
+    <string name="sunday_short">SU</string>
     <string name="activity_name">Activity name</string>
     <string name="name_of_activity">Name</string>
     <string name="color">Color</string>
@@ -106,10 +113,10 @@
     <string name="turn_off_notifications">Do you want...?</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="detail_fragment_label">Details</string>
-    <string name="details_daily">Daily</string>
-    <string name="details_weekly">Weekly</string>
-    <string name="details_weekly_days">Weekly on these days</string>
-    <string name="details_monthly">Monthly</string>
+    <string name="details_daily">daily</string>
+    <string name="details_weekly">weekly</string>
+    <string name="details_weekly_days">weekly on these days</string>
+    <string name="details_monthly">monthly</string>
     <string name="details_deadline">Deadline</string>
     <string name="details_interval">Interval (from - to)</string>
     <string name="details_end_date">The last day</string>
