--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,4 +160,7 @@
     <string name="detail_all_time">All time</string>
     <string name="detail_so_far">So far</string>
     <string name="detail_remaining">Remaining</string>
+    <string name="personal_statistics">Personal</string>
+    <string name="global_statistics">Global</string>
+    <string name="tips">Tips</string>
 </resources>
