--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,4 +163,15 @@
     <string name="personal_statistics">Personal</string>
     <string name="global_statistics">Global</string>
     <string name="tips">Tips</string>
+    <string name="select_time_period_chip">Select time period</string>
+    <string name="today_chip">Today</string>
+    <string name="yesterday_chip">Yesterday</string>
+    <string name="three_days_chip">Last 3 days</string>
+    <string name="week_chip">Last week</string>
+    <string name="two_week_chip">Last 2 weeks</string>
+    <string name="month_chip">Last month</string>
+    <string name="three_months_chip">Last 3 months</string>
+    <string name="all_time_chip">All</string>
+    <string name="all_activity_chip">All</string>
+    <string name="select_activity_chip">Select one or more activity</string>
 </resources>
