Working on global statistics

--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -162,4 +162,28 @@
     <string name="personal_statistics">Személyes</string>
     <string name="global_statistics">Globális</string>
     <string name="tips">Javaslatok</string>
+    <string name="select_time_period_chip">Válassz időszakot!</string>
+    <string name="today_chip">Ma</string>
+    <string name="yesterday_chip">Tegnap</string>
+    <string name="three_days_chip">Elmúlt 3 nap</string>
+    <string name="week_chip">Elmúlt hét</string>
+    <string name="two_week_chip">Elmúlt 2 hét</string>
+    <string name="month_chip">Elmúlt hónap</string>
+    <string name="three_months_chip">Elmúlt 3 hónap</string>
+    <string name="all_time_chip">Összes</string>
+    <string name="all_activity_chip">Összes</string>
+    <string name="select_activity_chip">Válassz egy vagy több tevékenységet!</string>
+    <string name="select_custom_day">Egyedi nap</string>
+    <string name="select_custom_from_to">Egyedi időszak</string>
+    <string name="date_hint">Dátum</string>
+    <string name="from_day">Kezdete</string>
+    <string name="to_day">Vége</string>
+    <string name="filter">Szűrés</string>
+    <string name="please_filter">Kérlek, használd a szűrőt!</string>
+    <string name="time_spent">Ennyi időt töltöttél vele a kiválasztott napon:</string>
+    <string name="select_activity">Válassz tevékenységet!</string>
+    <string name="select_gender">Válassz nemet!</string>
+    <string name="select_age_group">Válassz korosztályt!</string>
+    <string name="both">Mindekettő</string>
+    <string name="all_age_group_chip">Összes</string>
 </resources>
