working on global statistics and tips

--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -186,4 +186,5 @@
     <string name="select_age_group">Válassz korosztályt!</string>
     <string name="both">Mindekettő</string>
     <string name="all_age_group_chip">Összes</string>
+    <string name="fe_0">Nő \\u003C20</string>
 </resources>
