--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,6 +163,7 @@
     <string name="personal_statistics">Personal</string>
     <string name="global_statistics">Global</string>
     <string name="tips">Tips</string>
+    <string name="tip">Tip</string>
     <string name="select_time_period_chip">Select time period</string>
     <string name="today_chip">Today</string>
     <string name="yesterday_chip">Yesterday</string>
