--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="menu_statistics">Statistics</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_account">Account</string>
+
+    <!--    Registration-->
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
@@ -19,9 +21,34 @@
     <string name="birth_date">Birth date</string>
     <string name="user_registration_successful">User registration is successful!</string>
     <string name="user_registration_failure">Failed to register! Try again!</string>
-    <string name="user_login_failure">Failed to login! Please check email and password!</string>
+    <string name="registration_in_progress">Registration is in progress. Please, wait…</string>
+    <string name="registration_email_required">Email is required!</string>
+    <string name="registration_valid_email">Please, provide valid email!</string>
+    <string name="registration_password_required">Password is required!</string>
+    <string name="registration_password_length">Minimum 6 characters!</string>
+    <string name="registration_name_required">Name is required!</string>
+    <string name="registration_birth_date_required">Birth date is required!</string>
+
+    <!-- Login -->
+    <string name="user_login_failure">Failed to login! Please check credentials and Internet connection!</string>
     <string name="email_verification">Check your email to verify your account!</string>
+    <string name="login_went_wrong">Something went wrong. Please, try again!</string>
+    <string name="login_in_progress">Login is in progress. Please, wait…</string>
+    <string name="login_email_required">Email is required!</string>
+    <string name="login_valid_email">Please, provide valid email!</string>
+    <string name="login_password_required">Password is required!</string>
+    <string name="login_password_length">Minimum 6 characters!</string>
     <string name="logout">Logout</string>
+
+    <!-- Forgot password -->
+    <string name="send_email">Send email</string>
+    <string name="email_sending_in_progress">Email sending is in progress. Please, wait…</string>
+    <string name="email_sending_fail">Something went wrong. Please, try again!</string>
+    <string name="email_sending_successful">Check your email to reset your password!</string>
+    <string name="forgot_password_email_required">Email is required!</string>
+    <string name="forgot_password_valid_email">Please, provide valid email!</string>
+
+
     <string name="age_group">Age group</string>
     <string name="user_name">Name</string>
     <string name="gender">Gender</string>
@@ -215,4 +242,5 @@
     <string name="download_data_warning">Your local data will be overwritten. Do you want to continue?</string>
     <string name="create_backup_progress">Creating backup is in progress. Please wait…</string>
     <string name="restore_backup_progress">Restoring backup is in progress. Please wait…</string>
+    <string name="connect_to_stable_internet">Please, connect to stable Internet!</string>
 </resources>
